Add resume button to navigation bar

--- a/index.html
+++ b/index.html
@@ -106,6 +106,19 @@
             background: var(--bg-secondary);
         }
 
+        /* Resume Button */
+        .resume-btn {
+            background: var(--accent);
+            color: white !important;
+            border-radius: 20px;
+            padding: 0.5rem 1.2rem;
+        }
+
+        .resume-btn:hover {
+            background: var(--accent-hover);
+            color: white !important;
+        }
+
         /* Theme Toggle */
         .theme-toggle {
             background: var(--bg-secondary);
@@ -911,6 +924,7 @@
         <div class="nav-container">
             <a href="#" class="nav-brand">Yug Agarwal</a>
             <div class="nav-links">
+                <a href="https://drive.google.com/file/d/1_rBLDqd60NqZccMKWoBNNznhUxvCze9C/view?usp=drive_link" target="_blank" class="nav-link resume-btn">📄 Resume</a>
                 <a href="#education" class="nav-link">Education</a>
                 <a href="#skills" class="nav-link">Skills</a>
                 <a href="#experience" class="nav-link">Experience</a>
