--- a/index.html
+++ b/index.html
@@ -924,7 +924,7 @@
         <div class="nav-container">
             <a href="#" class="nav-brand">Yug Agarwal</a>
             <div class="nav-links">
-                <a href="https://drive.google.com/file/d/1_rBLDqd60NqZccMKWoBNNznhUxvCze9C/view?usp=drive_link" target="_blank" class="nav-link resume-btn">📄 Resume</a>
+                <a href="https://drive.google.com/file/d/1_rBLDqd60NqZccMKWoBNNznhUxvCze9C/view?usp=drive_link" target="_blank" class="nav-link resume-btn">Resume</a>
                 <a href="#education" class="nav-link">Education</a>
                 <a href="#skills" class="nav-link">Skills</a>
                 <a href="#experience" class="nav-link">Experience</a>
